# ml_and_ai_projects

./: README.md
Autoencoders/: MNIST autoencoders and clustering.ipynb  MNIST autoencoders.ipynb
Computer Vision/: Cats vs Dogs with CNN.ipynb  CelebFaces Attributes Dataset Male vs Female Classifier.ipynb  Fashion MNIST Convnet Classifier.ipynb
Decision Trees and Random Forests/: decision_trees_mushroom_edibility.ipynb
Decision Trees and Random Forests/Lens Classification Using Decision Tree/: Lens Classification Using Decision Tree.ipynb
Dimensionality Reduction, KMeans, Anomaly Detection/: anomaly_detection.ipynb  k_means.ipynb
LLMs and Transformers/Transformers from Scratch/: LICENSE  README.md  attn.ipynb  encoderdecoder.ipynb  pyproject.toml  requirements.txt  sources.md  tokenization.ipynb
LSTM/: Temperature Forecasting with LSTM.ipynb  ecg_classification.ipynb
Logistic Regression/: Logistic Regression on Bankrupcy Dataset.ipynb
Neural Networks/: Keras Programming Language Classification With Neural Nets.ipynb  Lenet_and_Alexnet_with_keras.ipynb  Neural Network From Scratch on MNIST.ipynb
Regression/: Bankruptcy Prediction via Regression.ipynb  desktop.ini  multiple_regression_and_gradient_descent.ipynb
Reinforcement Learning/: Q Learning with Frozen Lake.ipynb
Search and Hill Climbing/: 8_queens.ipynb  arad_to_bucharest_bfs_dfs_ucs_gbfs_a_star.ipynb
Spark and Google Cloud/: Spark Dataframe.ipynb  ml_with_spark_on_google_cloud_dataproc.ipynb
Transfer Learning + Fine Tuning/: Transfer Learning & Fine Tuning Cats and Dogs dataset.ipynb
(+13 files in other folders)
