[tool.poetry]
name = "transformershw2"
version = "0.1.0"
description = ""
authors = [
    "charitarthchugh <37895518+charitarthchugh@users.noreply.github.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
numpy = "^1.24.2"
jupyter = "^1.0.0"
notebook = "^6.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
